# MG3DGameEngine

./: .gitignore  .svnignore  Aici.path  CMakeLists.txt  CMakePresets.json  ReadMe.md  Scene.path  imgui.ini
Scripts/: KeyAssetScript.src
ScriptsGen/: KeyAssetScript.cpp
Shaders/: SimpleVertexShader.vertexshader  transparent_fragment_shader.glsl  transparent_vertex_shader.glsl
include/GameEngine/: Asset.hpp  AssetManager.hpp  Codes.hpp  CollisionObjects.hpp  Frustum.hpp  GameEngine.hpp  Globals.hpp  Hitbox.hpp  Object.hpp  OctreeNode.hpp  Particle.hpp  SceneNode.hpp  ScriptInstance.hpp  ScriptTransform.hpp  Signal.hpp  States.hpp  Transform.hpp  UI.hpp  UseTexture.hpp  camera.hpp  math.hpp  mesh.hpp  meshLoaderObj.hpp  shader.hpp  stringTokenizer.hpp  texture.hpp  window.hpp
include/backends/: imgui_impl_glfw.cpp  imgui_impl_glut.cpp  imgui_impl_glut.h
src/: Asset.cpp  AssetManager.cpp  GameEngine.cpp  Globals.cpp  Object.cpp  OctreeNode.cpp  Particle.cpp  SceneNode.cpp  ScriptInstance.cpp  ScriptTransform.cpp  Transform.cpp  UI.cpp  camera.cpp  empty.cpp  main.cpp  mainLoad.cpp  mainNodes.cpp  mesh.cpp  meshLoaderObj.cpp  shader.cpp  t  texture.cpp  window.cpp
